--- a/Styles/defaults.css
+++ b/Styles/defaults.css
@@ -6,7 +6,7 @@
 }
 
 .right_position {
-    float: right;
+    right: 0;
     margin: 0%;
     text-align: right;
 }
@@ -24,7 +24,7 @@ body {
     background-color: #DCDCDC;
 }
 
-hr {
+hr.nav {
     display: block;
     margin-top: 0.5em;
     margin-bottom: 0.5em;
@@ -32,6 +32,26 @@ hr {
     margin-right: auto;
     border-style: inset;
     border-width: 5px;
+    border: solid #022E6D
+}
+hr.indexTop {
+    display: block;
+    margin-top: 5%;
+    margin-bottom: 0.5em;
+    margin-left: 20%;
+    margin-right: 20%;
+    border-style: inset;
+    border-width: 20px;
+    border: solid #022E6D
+}
+hr.indexBottom {
+    display: block;
+    margin-top: 0.5em%;
+    margin-bottom: 5%;
+    margin-left: 20%;
+    margin-right: 20%;
+    border-style: inset;
+    border-width: 20px;
     border: solid #022E6D
 }
 
@@ -94,4 +114,24 @@ div.dropdown-content a {
 }
 .resize{
     width: 100%;
+}
+
+h1.index{
+    color: white;
+    font-size: 300%;
+}
+h2.index{
+    color: white;
+}
+h3.index
+{
+    margin-top: .5em;
+    margin-bottom: .5em;
+    margin-left: 20%;
+    margin-right: 20%;
+    line-height:2;
+}
+table.format{
+    width: 100%;
+    text-align: center;
 }
