--- a/Styles/defaults.css
+++ b/Styles/defaults.css
@@ -46,10 +46,20 @@ hr.indexTop {
 }
 hr.indexBottom {
     display: block;
-    margin-top: 0.5em%;
+    margin-top: 0.5em;
     margin-bottom: 5%;
     margin-left: 20%;
     margin-right: 20%;
+    border-style: inset;
+    border-width: 20px;
+    border: solid #022E6D
+}
+hr.table {
+    display: block;
+    margin-top: 5%;
+    margin-bottom: 5%;
+    margin-left: 5%;
+    margin-right: 5%;
     border-style: inset;
     border-width: 20px;
     border: solid #022E6D
@@ -120,6 +130,10 @@ h1.index{
     color: white;
     font-size: 300%;
 }
+h1.pages {
+    color: #022E6D;
+    font-size: 300%;
+}
 h2.index{
     color: white;
 }
@@ -134,4 +148,15 @@ h3.index
 table.format{
     width: 100%;
     text-align: center;
+}
+img.format{
+    width: 90%;
+}
+td.format{
+    width: 50%;
+}
+p.just{
+    text-align: justify;
+    margin-left: 5%;
+    margin-right: 5%;
 }
