--- a/Styles/defaults.css
+++ b/Styles/defaults.css
@@ -23,7 +23,6 @@ body {
     border: 5px groove #022E6D;
     background-color: #DCDCDC;
 }
-
 hr.nav {
     display: block;
     margin-top: 0.5em;
@@ -137,6 +136,11 @@ h1.pages {
 h2.index{
     color: white;
 }
+h2.pages {
+    color: #022E6D;
+    font-size: 200%;
+    margin-left: 15%;
+}
 h3.index
 {
     margin-top: .5em;
@@ -145,6 +149,22 @@ h3.index
     margin-right: 20%;
     line-height:2;
 }
+p.pages{
+    margin-left: 15%;
+    color: black;
+}
+h3.pages {
+    margin-left: 15%;
+    color: black;
+}
+ul.pages{
+    margin-left: 15%;
+    color: black;
+}
+.pagesformat
+{
+    margin-left: 15%;
+}
 table.format{
     width: 100%;
     text-align: center;
@@ -152,11 +172,43 @@ table.format{
 img.format{
     width: 90%;
 }
+img.resizetwothrids
+{
+    width: 66%;
+}
 td.format{
     width: 50%;
+}
+td.five{
+    width: 20%;
 }
 p.just{
     text-align: justify;
     margin-left: 5%;
     margin-right: 5%;
+}
+
+ul.sidenav {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    width: 10%;
+    background-color: #333;
+    color: white;
+    position: fixed;
+    overflow: auto;
+}
+li.sidenav a{
+    display: block;
+    padding: 8px 16px;
+    color: white;
+    text-decoration: none;
+}
+li.sidenav img{
+    text-decoration: none;
+    height: 200px;
+}
+li.sidenav a:hover {
+    background-color: #0066ff;
+    color: white;
 }
