--- a/Styles/defaults.css
+++ b/Styles/defaults.css
@@ -31,7 +31,7 @@ hr.nav {
     margin-right: auto;
     border-style: inset;
     border-width: 5px;
-    border: solid #022E6D
+    border: solid #022E6D;    
 }
 hr.indexTop {
     display: block;
@@ -41,7 +41,7 @@ hr.indexTop {
     margin-right: 20%;
     border-style: inset;
     border-width: 20px;
-    border: solid #022E6D
+    border: solid #022E6D;
 }
 hr.indexBottom {
     display: block;
@@ -51,7 +51,7 @@ hr.indexBottom {
     margin-right: 20%;
     border-style: inset;
     border-width: 20px;
-    border: solid #022E6D
+    border: solid #022E6D;
 }
 hr.table {
     display: block;
@@ -61,7 +61,7 @@ hr.table {
     margin-right: 5%;
     border-style: inset;
     border-width: 20px;
-    border: solid #022E6D
+    border: solid #022E6D;
 }
 
 ul.nav{
@@ -111,7 +111,15 @@ div.dropdown-content a {
 .active {
     background-color: #022E6D;
 }
-.container{
+
+.sticky {
+    position: fixed;
+    top: 0;
+    width: 90%;
+    z-index: 1;
+}
+
+.container {
     position: relative;
     text-align: center;
 }
@@ -132,6 +140,7 @@ h1.index{
 h1.pages {
     color: #022E6D;
     font-size: 300%;
+    padding-top: 1em;
 }
 h2.index{
     color: white;
@@ -232,7 +241,7 @@ div.plan p{
 }
 iframe.size{
     width: 55%;
-    height: 30em;
+    height: 35em;
 }
 h3.margin{
     margin-bottom: 2em;
