--- a/Styles/ContactLayout.css
+++ b/Styles/ContactLayout.css
@@ -1,7 +1,7 @@
 ﻿/********************************** Grid Layout **********************************/
 .grid-container {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 50% 50%;
     grid-template-rows: auto auto auto;
     grid-template-areas: 'header header' 'image content' 'main main';
     grid-row-gap: 1em;
@@ -23,3 +23,5 @@
 #grid-main {
     grid-area: main;
 }
+
+/********************************** Contact Items **********************************/
