--- a/Styles/IndexLayout.css
+++ b/Styles/IndexLayout.css
@@ -98,3 +98,26 @@ hr.indexBottom {
 .resize {
     width: 100%;
 }
+
+/*********************** Mobile Layout ***************************/
+@media screen and (max-width: 1000px) {
+    hr.indexTop{
+        margin-left: 10%;
+        margin-right: 10%;
+    }
+    hr.indexBottom{
+        margin-left: 10%;
+        margin-right: 10%;
+    }
+    h3.index {
+        margin-left: 10%;
+        margin-right: 10%;
+        line-height: 2;
+        font-size: 200%;
+    }
+    h2{
+        font-size: 225%;
+        margin-left: 1%;
+        margin-right: 1%;
+    }
+}
