--- a/Styles/defaults.css
+++ b/Styles/defaults.css
@@ -1,8 +1,7 @@
-﻿footer{
-/*position: absolute;
-    bottom: 0;
-    width: 100%;
-    */
+﻿/********************************** Footer Items **********************************/
+footer{
+margin-right: 1%;
+margin-top: 5%;
 }
 
 .right_position {
@@ -11,10 +10,7 @@
     text-align: right;
 }
 
-.image_center{
-    display: block;
-    text-align: center;
-}
+/********************************** Standard Items **********************************/
 body {
     margin: auto;
     width: 90%;
@@ -22,16 +18,6 @@ body {
     padding: 1em;
     border: 5px groove #022E6D;
     background-color: #DCDCDC;
-}
-hr.nav {
-    display: block;
-    margin-top: 0.5em;
-    margin-bottom: 0.5em;
-    margin-left: auto;
-    margin-right: auto;
-    border-style: inset;
-    border-width: 5px;
-    border: solid #022E6D;    
 }
 
 h1.pages {
@@ -45,75 +31,23 @@ h2.pages {
     color: #022E6D;
     font-size: 200%;
 }
+img.resizing {
+    width: 100%;
+}
+h3.margin {
+    margin-bottom: 2em;
+}
 
-hr.projects {
+/********************************** Side Navagation Items **********************************/
+hr.nav {
     display: block;
-    margin-top: 1%;
-    margin-bottom: 1%;
-    margin-left: 15%;
-    margin-right: 15%;
+    margin-top: 0.5em;
+    margin-bottom: 0.5em;
+    margin-left: auto;
+    margin-right: auto;
     border-style: inset;
-    border-width: 20px;
-    border: solid #022E6D;
-}
-
-ul.nav{
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: #333;
-}
-li.navitem{
-    float: left;
-}
-li.navitem a, .dropbtn{
-    display: inline-block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-}
-li.navitem a:hover, dropdown:hover .dropbtn {
-    background-color: #0066ff;
-}
-li.dropdown{
-    display: inline-block;
-}
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #DCDCDC;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-}
-div.dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    text-align: left;
-    display: block;
-}
-.dropdown-content a:hover {
-    background-color: #f1f1f1;
-}
-.dropdown:hover .dropdown-content{
-    display: block;
-}
-.active {
-    background-color: #022E6D;
-}
-
-.sticky {
-    position: fixed;
-    top: 0;
-    width: 90%;
-    z-index: 1;
-}
-
-img.format{
-    width: 90%;
+    border-width: 5px;
+    border: solid #022E6D;    
 }
 
 ul.sidenav {
@@ -121,10 +55,12 @@ ul.sidenav {
     margin: 0;
     padding: 0;
     width: 10%;
+    min-width: 100px;
     background-color: #333;
     color: white;
     position: fixed;
     overflow: auto;
+    float: left;
 }
 li.sidenav a{
     display: block;
@@ -140,41 +76,28 @@ li.sidenav a:hover {
     background-color: #0066ff;
     color: white;
 }
-div.plan{
-    margin-left: 5%;
-    margin-right: 5%;
-}
-div.plan h1 {
-    color: #0066ff;
-    font-size: 225%;
-    padding-top: 1em;
-    padding-bottom: 0em;
-}
-div.plan h2{
-    padding-bottom: .1em;
-    padding-top: .1em;
-    font-size: 150%;
-}
-div.plan p{
-    font-size: 125%;
-}
-iframe.size{
-    width: 55%;
-    height: 35em;
-}
-h3.margin{
-    margin-bottom: 2em;
-}
-p.bio{
-    font-size: 150%;
-}
-.reszieimg{
-    width: 10%;
-}
-.smaller{
-    margin-left: 17.5%;
-    margin-right: 17.5%;
-}
-ul.effect{
+ul.effect {
     box-shadow: 1px 1px 3px 3px black;
+}
+
+/*********************** Mobile Layout ***************************/
+@media screen and (max-width: 1000px) {
+    body{
+        border: none;
+        width: 100%;
+        padding: 0em;
+    }
+    ul.sidenav{
+        font-size: 22px;
+    }
+    h1.pages {
+        font-size: 350%;
+    }
+
+    h2.pages {
+        font-size: 250%;
+    }
+    p{
+        font-size: 175%;
+    }
 }
