--- a/Styles/ContactLayout.css
+++ b/Styles/ContactLayout.css
@@ -3,7 +3,7 @@
     display: grid;
     grid-template-columns: 50% 50%;
     grid-template-rows: auto auto auto;
-    grid-template-areas: 'header header' 'image content' 'main main';
+    grid-template-areas: 'header header' 'image content' 'form form' 'main main';
     grid-row-gap: 1em;
     align-items: center;
 }
@@ -15,6 +15,9 @@
 #grid-image {
     grid-area: image;
 }
+#grid-form{
+    grid-area: form;
+}
 
 #grid-content {
     grid-area: content;
@@ -25,3 +28,36 @@
 }
 
 /********************************** Contact Items **********************************/
+
+form.contact {
+    text-align: center;
+    margin-left: 20%;
+    margin-right: 20%;
+}
+form.contact > label {
+    display: inline-block;
+    font-size: 2em;
+}
+form.contact > input {
+    display: inline-block;
+    width: 100%;
+    height: 2.5em;
+    font-size: 1.75em;
+    text-align: center;
+}
+    form.contact > textarea {
+        display: inline-block;
+        width: 100%;
+        height: 7em;
+        font-size: 1.75em;
+    }
+    form.contact > button {
+        display: inline-block;
+        padding: 1em 3em 1em 3em;
+        background-color: #022E6D;
+        color: white;
+        font-size: 1.5em;
+    }
+        form.contact > button:hover {
+            background-color: #0066ff;
+        }
