--- a/Styles/AboutLayout.css
+++ b/Styles/AboutLayout.css
@@ -38,15 +38,18 @@ p.just {
         grid-template-columns: 100%;
         grid-template-rows: auto auto auto auto;
         grid-template-areas: 'header' 'image' 'content' 'main';
-        margin-left: 5%;
-        margin-right: 5%;
+        margin-left: 1.5%;
+        margin-right: 1.5%;
     }
 
     h2 {
-        font-size: 200%;
+        font-size: 100%;
     }
 
     p {
-        font-size: 175%;
+        font-size: 87.5%;
+    }
+    p.bio{
+        font-size: 95%;
     }
 }
