--- a/Styles/BusinessLayout.css
+++ b/Styles/BusinessLayout.css
@@ -23,9 +23,13 @@ div.plan {
 
 /*********************** Mobile Layout ***************************/
 @media screen and (max-width: 1000px) {
+    .grid-container {
+        margin-left: 1.5%;
+        margin-right: 1.5%;
+    }
     div.plan h1 {
         color: #0066ff;
-        font-size: 275%;
+        font-size: 137.5%;
         padding-top: 1em;
         padding-bottom: 0em;
     }
@@ -33,14 +37,14 @@ div.plan {
     div.plan h2 {
         padding-bottom: .1em;
         padding-top: .1em;
-        font-size: 200%;
+        font-size: 100%;
     }
 
     div.plan p {
-        font-size: 175%;
+        font-size: 87.5%;
     }
 
     ul {
-        font-size: 165%;
+        font-size: 82.5%;
     }
 }
