--- a/functions/views/apps.hbs
+++ b/functions/views/apps.hbs
@@ -25,8 +25,11 @@
     <nav id="nav-placeholder"></nav>
 
     <hr class="nav" />
-    <h1>Current number of iOS app downloads: </h1>
-    <h3>{{{text}}}</h3>
+    <h1>Number of iOS app downloads in 2019: </h1>
+    <pre>{{{text}}}</pre>
+
+    <br /><br />
+    <p>Results are gathered using the app store connect REST API.</p>
 
     <script src="Dynamic/NavigationBarJS.js"></script>
 
