--- a/functions/views/apps.hbs
+++ b/functions/views/apps.hbs
@@ -29,7 +29,7 @@
     <pre>{{{text}}}</pre>
 
     <br /><br />
-    <p>Results are gathered using the app store connect REST API.</p>
+    <p>Results are gathered using the app store connect REST API. The HTTPS GET request is stored as a FireBase Cloud funtion. Data is loaded into a template webpage.</p>
 
     <script src="Dynamic/NavigationBarJS.js"></script>
 
