--- a/functions/views/apps.hbs
+++ b/functions/views/apps.hbs
@@ -26,11 +26,20 @@
 
     <hr class="nav" />
     <h1>Number of iOS app downloads in 2019: </h1>
-    <pre>{{{text}}}</pre>
+    <center><pre>{{{text}}}</pre></center>
 
     <br /><br />
-    <p>Results are gathered using the app store connect REST API. The HTTPS GET request is stored as a FireBase Cloud funtion. Data is loaded into a template webpage.</p>
+    <p>Results are gathered using Apple's App Store Connect REST API. The HTTPS GET request is stored as a FireBase Cloud Funtion. The resulting data is then loaded into a template webpage.</p>
 
+    <br /><br />
+    <footer>
+        <div class="right_position">
+            <img src="Images/ARLogo.png" height="150" alt="Andrew Rotert Development Logo" />
+            <br />
+            <p class="bottom_position">&copy Copyright 2019-2020 Andrew Rotert</p>
+        </div>
+
+    </footer>
     <script src="Dynamic/NavigationBarJS.js"></script>
 
     <script src="Dynamic/NavBar.js"></script>
