--- a/Styles/defaults.css
+++ b/Styles/defaults.css
@@ -40,6 +40,9 @@ img.resizing {
 h3.margin {
     margin-bottom: 2em;
 }
+pre{
+    font-size: 200%;
+}
 
 /********************************** Side Navagation Items **********************************/
 hr.nav {
