--- a/Styles/AboutLayout.css
+++ b/Styles/AboutLayout.css
@@ -32,6 +32,34 @@ p.bio {
 p.just {
     text-align: justify;
 }
+.portfolio{
+    border-radius: 15%;
+    width: 75%;
+}
+
+.projectsLink {
+    font-size: 150%;
+    text-align: justify;
+}
+a.projectsLink:link {
+    text-decoration: none;
+    color: #0066ff;
+}
+
+a.projectsLink:visited {
+    text-decoration: none;
+    color: #0066ff;
+}
+
+a.projectsLink:hover {
+    text-decoration: underline;
+    color: #0066ff;
+}
+
+a.projectsLink:active {
+    text-decoration: underline;
+    color: #0066ff;
+}
 /*********************** Mobile Layout ***************************/
 @media screen and (max-width: 1000px) {
     .grid-container {
@@ -50,6 +78,9 @@ p.just {
         font-size: 87.5%;
     }
     p.bio{
+        font-size: 95%;
+    }
+    .projectsLink {
         font-size: 95%;
     }
 }
