--- a/Styles/AboutLayout.css
+++ b/Styles/AboutLayout.css
@@ -3,7 +3,7 @@
     display: grid;
     grid-template-columns: 50% 50%;
     grid-template-rows: auto auto auto;
-    grid-template-areas: 'header header' 'image content' 'main main';
+    grid-template-areas: 'header header' 'image content' 'project project' 'main main';
     grid-row-gap: 1em;
     grid-column-gap: 1em;
     align-items: center;
@@ -20,6 +20,9 @@
 }
 #grid-content{
     grid-area: content;
+}
+#grid-project{
+    grid-area: project;
 }
 #grid-main{
     grid-area: main;
@@ -73,13 +76,24 @@ a.projectsLink:active {
 .resume-heading {
     color: #022E6D;
 }
-
+.title-tag {
+    font-size: 150%;
+    color: #022E6D;
+}
+.resize-projects{
+    width: 75%;
+    cursor: pointer;
+    border-radius: 1%;
+}
+.increase-font {
+    font-size: 115%;
+}
 /*********************** Mobile Layout ***************************/
 @media screen and (max-width: 1000px) {
     .grid-container {
         grid-template-columns: 100%;
         grid-template-rows: auto auto auto auto;
-        grid-template-areas: 'header' 'image' 'content' 'main';
+        grid-template-areas: 'header' 'image' 'content' 'project' 'main';
         margin-left: 1.5%;
         margin-right: 1.5%;
     }
