--- a/functions/views/apps.hbs
+++ b/functions/views/apps.hbs
@@ -20,9 +20,10 @@
 <body>
     <div>
         <center><img src="Images/DevelopedNotDownloaded.png" class="logo" alt="Logo" /></center>
-        <hr class="nav" />
+        <p class="top-name">By Andrew Rotert</p>
     </div>
 
+    <hr class="nav" />
     <nav id="nav-placeholder"></nav>
     <hr class="nav" />
 
@@ -54,7 +55,8 @@
     <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
     <script src="https://unpkg.com/react@16/umd/react.production.min.js" crossorigin></script>
     <script src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js" crossorigin></script>
-    <script type="text/babel" src="Dynamic/reactnav.js"></script>
+    <script type="text/babel" src="Dynamic/reactnav.js">
+    </script>
 
 </body>
 </html>
