--- a/Styles/ProjectViewLayout.css
+++ b/Styles/ProjectViewLayout.css
@@ -12,6 +12,10 @@
     font-size: 200%;
 }
 
+.max {
+    width: 80%;
+    max-width: 538px;
+}
 /*********************** Mobile Layout ***************************/
 @media screen and (max-width: 1000px) {
     .region {
